--- a/mainstyles.css
+++ b/mainstyles.css
@@ -59,12 +59,12 @@ h4 {
 	font-size: 110%;
 	margin-bottom: 10px;
 }
-.concert-button {
+.concert-button-link {
 	text-decoration: none;
 	color: black;
 }
 
-.concert-link-div {
+.concert-button {
 	border: blue 1px solid;
 	background-color: lightblue;
 	width: 90%;
@@ -79,6 +79,7 @@ h4 {
 .concert-info {
 	margin: 15px 10px 15px 5px;
 }
+
 /* Artist Page */
 #artist-image-and-contact, #artist-information {
 	float: left;
