--- a/mainstyles.css
+++ b/mainstyles.css
@@ -2,7 +2,6 @@
 body, html{
 	margin: 0px;
 	padding: 0px;
-	min-width: 960px;
 }
 
 h1, h2, h3, h4, h5, h6, nav li a {	/* Set the font of all headings and the Nav Options to Serif Fonts*/
@@ -15,7 +14,9 @@ p {	/* Set paragraph fonts to san-serif */
 	font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
 	font-size: 95%;
 }
+
 #main {
+	min-width: 960px;
 	margin: 10px 75px;
 }
 
@@ -24,6 +25,31 @@ p {	/* Set paragraph fonts to san-serif */
 	padding: 5px 0px;
 	border-bottom: 1px blue solid;
 	
+}
+/* Footer */
+#footer {
+	clear: both;
+	padding-top: 5px; padding-bottom: 5px;
+	background-color: #005794;
+}
+
+#footer-sponor-row img{
+	max-width: 100%;
+	min-width: 960px;
+	height: auto;
+}
+
+#footer-form-row ul {
+	list-style: none;
+	text-align: center;
+}
+
+#footer-form-row ul li {
+	display: inline-block;
+	background-color: white;
+	border-radius: 5px;
+	padding: 5px 0px;
+	width: 25%;
 }
 
 /* Header & Nav */
@@ -54,6 +80,7 @@ nav li a {
 	text-decoration: none;
 	padding: 1px 20px;
 }
+
 /* Concert Link Object */
 h4 {
 	font-size: 110%;
@@ -67,8 +94,8 @@ h4 {
 .concert-button {
 	border: blue 1px solid;
 	background-color: lightblue;
-	width: 90%;
-	margin: 0 auto;	
+	width: auto;
+	margin: 0 10px 20px;	
 }
 
 .concert-title {
@@ -116,7 +143,7 @@ h3.socialmediamessage {
 }
 
 #artist-information {
-	margin: 0px 5px;
+	margin: 0px 5px 40px;
 	padding: 0px;
 	width: 70%;
 }
