--- a/mainstyles.css
+++ b/mainstyles.css
@@ -39,17 +39,9 @@ p {	/* Set paragraph fonts to san-serif */
 	height: auto;
 }
 
-#footer-form-row ul {
-	list-style: none;
-	text-align: center;
-}
-
-#footer-form-row ul li {
-	display: inline-block;
-	background-color: white;
-	border-radius: 5px;
-	padding: 5px 0px;
-	width: 25%;
+#footer-nav li a {
+	font-size: 100%;
+	padding: 1px 10px;
 }
 
 /* Header & Nav */
@@ -58,26 +50,29 @@ p {	/* Set paragraph fonts to san-serif */
 	margin: 0 auto;	/* Center Logo Image */
 }
 
-nav ul {
+.navigation ul{
 	list-style: none;
 	text-align: center;
 	padding: 10px 0px;
 	background-color: #005794;
 }
 
-nav li {
+.navigation li {
 	display: inline-block;
 	border-right: 1px solid white;
 }
 
-nav li:last-child {
+.navigation li:last-child {
 	border-right: none;
 }
 
-nav li a {
+.navigation li a {
 	color: white;
-	font-size: 120%;
 	text-decoration: none;
+}
+
+nav li a {
+	font-size: 120%;
 	padding: 1px 20px;
 }
 
@@ -152,4 +147,120 @@ h3.socialmediamessage {
 	width: 95%;
 	text-align: justify;
 	padding: 0px 10px;
+}
+
+/* Carosuel Example Styles */
+.slick-slide {
+    margin: 0px 20px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider
+{
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+            user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
 }
