--- a/mainstyles.css
+++ b/mainstyles.css
@@ -20,16 +20,20 @@ p {	/* Set paragraph fonts to san-serif */
 	margin: 10px 75px;
 }
 
+#main h2 {
+	border-bottom: 1px solid #156ca9;
+}
+
 #main h2, h3 {
 	margin: 0px 0px 20px;
 	padding: 5px 0px;
-	border-bottom: 1px blue solid;
+	color: #156ca9;
 	
 }
 /* Footer */
 #footer {
 	clear: both;
-	padding-top: 15px; padding-bottom: 5px;
+	padding-top: 15px; padding-bottom: 15px;
 	background-color: #2b3c67;
 	min-width: 1080px;
 }
@@ -38,6 +42,7 @@ p {	/* Set paragraph fonts to san-serif */
 	border-top: 2px solid white;
 	width: 95%;
 	margin: 0 auto;
+	clear: both;
 }
 
 #footer-nav {
@@ -47,6 +52,7 @@ p {	/* Set paragraph fonts to san-serif */
 #footer-nav ul, #footer-nav li a, #footer-nav h6 {
 	margin: 0px;
 }
+
 #footer-nav li a {
 	font-size: 100%;
 	padding: 1px 10px;
@@ -56,6 +62,26 @@ p {	/* Set paragraph fonts to san-serif */
 	text-align: center;
 	color: white;
 	font-size: 120%;
+}
+
+.tickets-cta {
+	display: block;
+	width: 100px;
+	padding: 10px;
+	margin: 10px auto 0px;
+	text-align: center;
+	background-color: white;
+	color: black;
+}
+
+.tickets-cta:hover {
+	text-decoration: none;
+	background-color: #e9e9e9;
+}
+
+#copyright {
+	color: white;
+	margin-left: 50px; margin-top: 20px;
 }
 
 /* Header & Nav */
@@ -87,7 +113,11 @@ p {	/* Set paragraph fonts to san-serif */
 
 nav li a {
 	font-size: 120%;
-	padding: 1px 20px;
+	padding: 2px 20px;
+}
+
+.navigation li a:hover, .navigation li a:active, .navigation li a:focus {
+	background-color: #495b88;
 }
 
 /* Breadcrumb Navigation */
@@ -114,7 +144,7 @@ nav li a {
 }
 
 #breadcrumb-nav li+li:before {
-	padding: 0px 10px;
+	padding: 0px 15px;
 	content: ">\00a0"
 }
 
@@ -122,39 +152,41 @@ nav li a {
 .concert-overview {
 	background-color: #4369b0;
 	color: white;
-	height: 125px;
-	width: 700px;
+	height: 165px;
+	width: 600px;
 }
 
 .concert-title-date {
-	width: 25%;
-	height: 105px;
+	width: 180px;
+	height: 140px;
 	float: left;
 	border-right: 1px solid white;
-	margin: 10px 10px;
+	margin: 10px 30px 0px ;
 }
 
+.concert-title {
+	font-size: 105%;
+}
 .concert-location, .concert-date {
-	margin-left: 20px;
+	margin-left: 5px; margin-top: 15px;
 	font-size: 85%;
 }
 
 .concert-summary {
-	padding-top: 15px;
-	width: 53%;
-	margin: 0px;
-	float: left;
+	padding-top: 15px; padding-right: 25px;
 }
 
 .concert-page-button {
-	text-align: center;
 	background-color: white;
-	width: 15%;
-	height: 40px;
-	float: left;
-	margin-top: 75px; margin-left: 30px;
+	width: 145px;
+	height: 30px;
+	float: right;
+	margin: 10px 10px 10px;
 }
 
+.concert-page-button p {
+	margin-top: 5px; margin-left: 5px;
+}
 .concert-page-button:hover {
 	text-decoration: none;
 }
@@ -194,17 +226,23 @@ h3.socialmediamessage {
 }
 
 #artist-information {
-	margin: 0px 5px 40px;
+	margin: -15px 5px 40px;
 	padding: 0px;
 	width: 70%;
 }
 
 #artist-information p {
-	width: 95%;
+	width: 100%;
 	text-align: justify;
-	padding: 0px 10px;
 }
 
+#artist-information h3, #artist-information h4 {
+	color: #156ca9;
+}
+
+#artist-information h3 {
+	margin-top: 25px;
+}
 /* Carosuel Example Styles */
 .container {
 	margin-top: 5px;
