--- a/MILESTONE 2/mainstyles.css
+++ b/MILESTONE 2/mainstyles.css
@@ -8,6 +8,11 @@ body, html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	min-width: 1366px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	/* For Font Later */
 }
 
 #header-img {
@@ -28,20 +33,31 @@ footer, .push {
 }
 
 /* ANNOUNCEMENTS */
-#announcements {
+#main-content {
+	display: block;
+	width: 1284px;
+	margin: 0 auto;
 	margin-top: 15px;
 }
+
+#announcements {
+	margin-bottom: 175px;;
+}
+
 #announcements h2 {
 	text-align: center;
 	border-bottom: 2px solid #005794;
-	width: 80%;
 	margin: 0 auto 15px;
 }
+
+#announce2 {
+	margin: 0px 25px;
+}
+
 .announcement-box {
 	background-color: #005794;
-	width: 30%;
-	height: 120px;
-	margin-left: 20px;
+	width: 411px;
+	height: 140px;
 	float: left;
 }
 
@@ -55,6 +71,70 @@ footer, .push {
 .announcement-info {
 	color: white;
 	margin: 0px 0px 0px 20px;
+}
+
+/* UPCOMING CONCERT */
+#upcoming-concert {
+	clear: both;
+	height: 140px;
+	background-color: #23c5b7;
+}
+
+#title-location-time {
+	width: 361px;
+	height: 80%;
+	margin: 12.5px 0px 0px 50px;
+	float: left;
+	border-right: 1px solid white;
+}
+
+#next-con-title {
+	margin: 5px 0px;
+}
+
+#next-con-info {
+	float: left;
+	margin: 5px 0px 0px 0px;
+	text-align: center;
+	height: 80%;
+}
+
+#next-con-info ul, #next-con-info li {
+	list-style: none;
+	text-align: center;
+	margin-left: -22px;
+}
+
+#conductor {
+	float: left;
+	margin-top: 7.5px;
+	height: 100%;
+	width: 240px;
+	border-right: 1px solid white;
+}
+
+#special-guests {
+	float: left;
+	margin-top: 7.5px;
+	height: 100%;
+	width: 240px;
+	border-right: 1px solid white;
+}
+
+#next-con-book-now, #next-con-learn-more {
+	display: block;
+	float: left;
+	width: 368px;
+	height: 50px;
+	background-color: white;
+}
+
+#next-con-learn-more {
+	margin: 12.5px;
+}
+
+#next-con-book-now {
+	margin: 0px 12.5px 12.5px;
 }
 
 /* NAV */
