--- a/MILESTONE 2/mainstyles.css
+++ b/MILESTONE 2/mainstyles.css
@@ -77,6 +77,7 @@ footer, .push {
 	clear: both;
 	height: 140px;
 	background-color: #23c5b7;
+	margin-bottom: 40px;
 }
 
 #title-location-time {
@@ -123,8 +124,8 @@ footer, .push {
 #next-con-book-now, #next-con-learn-more {
 	display: block;
 	float: left;
-	width: 386px;
-	height: 50px;
+	width: 326px;
+	height: 0px;
 	background-color: white;
 }
 
@@ -144,8 +145,20 @@ footer, .push {
 #facebook {
 	width: 411px;
 	float: left;
+	margin: 0;
 	text-align: center;
 }
+
+#home-sign-up {
+	float: left;
+	width: 411px;
+	text-align: center;
+}
+
+.home-form-buttons {
+	margin-bottom: 20px;
+}
+
 /* NAV */
 .nav ul {
 	text-align: center;
@@ -182,6 +195,7 @@ footer {
 	background-color: #005794;
 	padding: 15px 0px;
 	min-width: 1080px; /* Unsure about this */
+	clear: both;
 }
 
 .footerline {
