--- a/MILESTONE 2/mainstyles.css
+++ b/MILESTONE 2/mainstyles.css
@@ -4,6 +4,7 @@ COLORS
 Main Blue (Nav, Footer & Logo): #005794 
 */
 
+/* GENERAL STYLING */
 body, html {
 	margin: 0;
 	padding: 0;
@@ -24,6 +25,13 @@ li, p {
 	margin: 10px auto;
 }
 
+#main-content {
+	display: block;
+	width: 1284px;
+	margin: 0 auto;
+	margin-top: 15px;
+}
+
 /* GENERAL CLASSES */
 .remove-link-lines, .remove-link-lines:visted {
 	text-decoration: none;
@@ -32,6 +40,7 @@ li, p {
 .remove-link-lines:hover, .remove-link-lines:active, .remove-link-lines:focus {
 	text-decoration: none;
 }
+
 /* Sticky Footer */
 #wrapper {
 	min-height: 100%;
@@ -40,199 +49,7 @@ li, p {
 }
 
 footer, .push {
-	height: 300px;
-}
-
-/* ANNOUNCEMENTS */
-#main-content {
-	display: block;
-	width: 1284px;
-	margin: 0 auto;
-	margin-top: 15px;
-}
-
-#announcements {
-	margin-bottom: 240px;
-}
-
-#announcements h2 {
-	text-align: center;
-	font-family: 'PT Serif', Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-	border-bottom: 2px solid #005794;
-	margin: 0 auto 15px;
-}
-
-#announce2 {
-	margin: 0px 25px;
-}
-
-.announcement-box {
-	background-color: #005794;
-	width: 411px;
-	height: 210px;
-	float: left;
-}
-
-.announcement-title {
-	color: white;
-	font-size: 130%;
-	font-family: "PT Serif", Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-	margin: 10px 0px 0px 0px;
-	text-align: center;
-}
-
-.announcement-info {
-	color: white;
-	text-align: center;
-	padding: 10px 20px;
-}
-
-#announcements .read-more-button {
-	width: 371px;
-	height: 30px;
-	margin: 0 20px;
-	padding: 5px;
-	text-align: center;
-	text-decoration: none;
-	cursor: pointer;
-	background-color: white;
-}
-
-.announcement-info-box {
-	height: 105px;
-}
-
-.expiry-date {
-	color: white;
-	text-align: center;
-	font-size: 90%;
-}
-
-/* UPCOMING CONCERT */
-#upcoming-concert {
-	clear: both;
-	height: 200px;
-	background-color: #23c5b7;
-	margin-bottom: 40px;
-}
-
-#title-location-time {
-	width: 361px;
-	height: 80%;
-	margin: 20px 0px 0px 50px;
-	float: left;
-	font-family: 'PT Serif', Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-	border-right: 1px solid white;
-}
-
-#next-con-title {
-	margin: 5px 0px 15px;
-	font-family: 'PT Serif', Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-}
-
-#next-con-info {
-	float: left;
-	margin: 13px 0px 0px 0px;
-	text-align: center;
-	font-family: 'PT Serif', Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-	height: 80%;
-}
-
-#next-con-info ul, #next-con-info li {
-	list-style: none;
-	text-align: center;
-	font-family: 'PT Sans', Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-	font-size: 110%;
-	margin-left: -22px;
-}
-
-#conductor {
-	float: left;
-	margin-top: 8px;
-	height: 100%;
-	width: 231px;
-	border-right: 1px solid white;
-}
-
-#special-guests {
-	float: left;
-	margin-top: 7.5px;
-	height: 100%;
-	width: 231px;
-	border-right: 1px solid white;
-}
-
-#next-con-book-now, #next-con-learn-more {
-	display: block;
-	float: left;
-	width: 366px;
-	height: 70px;
-	font-size: 115%;
-	background-color: white;
-	cursor: pointer;
-}
-
-#next-con-learn-more {
-	margin: 22px 22px 18px;
-	padding: 24px;
-	text-align: center;
-}
-
-#next-con-book-now {
-	margin: 0px 22px 22px;
-	padding: 24px;
-	text-align: center;
-}
-
-/* FACEBOOK INTEGRATION */
-.secondary-main {
-	margin: 35px 0 40px;
-	font-family: 'PT Serif', Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-}
-
-#facebook, #home-featured-artist {
-	width: 411px;
-	float: left;
-	margin: 0;
-	text-align: center;
-}
-
-#home-sign-up {
-	float: left;
-	width: 411px;
-	text-align: center;
-	margin: 0 15px 0 35px;
-}
-
-.home-form-buttons {
-	margin-bottom: 25px;
-}
-
-#home-artist-info {
-	width: 301px;
-	margin: 10px 55px;
-	text-align: center;
-}
-
-#home-artist-name {
-	margin: 15px 0;
-}
-
-a #home-go-to-artist {
-	background-color: #005794;
-	color: white;
-	text-decoration: none;
-	width: 311px;
-	height: 42px;
-	margin: 20px 50px;
-}
-
-#home-artist-info {
-	font-size: 110%;
-}
-
-a #home-go-to-artist p {
-	padding: 10px 0px;
+	height: 315px;
 }
 
 /* NAV */
@@ -287,10 +104,15 @@ footer {
 	font-size: 120%;
 }
 
+#nav-title {
+	margin-top: 20px;
+}
+
 #copyright-info {
 	color: white;
 	text-align: center;
 }
+
 /* Sponsors Slider */
 .container {
 	margin-top: 5px;
