Add content to contact_us.html

--- a/MILESTONE 2/mainstyles.css
+++ b/MILESTONE 2/mainstyles.css
@@ -20,6 +20,10 @@ li, p {
 	font-family: 'PT Sans', Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 }
 
+table td {
+	font-family: 'PT Sans', Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+}
+
 #header-img {
 	display: block;
 	margin: 10px auto;
