--- a/MILESTONE 2/contactstyles.css
+++ b/MILESTONE 2/contactstyles.css
@@ -8,6 +8,8 @@ Main Blue (Nav, Footer & Logo): #005794
 #wrapper h2 {
 	border-bottom: 1px solid #005794;
 	text-align: center;
+	font-family: "PT Serif", Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
+	margin-bottom: 20px;
 }
 
 #contact-table {
@@ -26,5 +28,74 @@ Main Blue (Nav, Footer & Logo): #005794
 
 /* CONTACT FORM */
 #send-a-message {
-	width: 60%;
+	width: 55%;
+	float: left;
+	margin-top: 40px;
+}
+
+#contact-us-form input {
+	width: 100%;
+}
+
+#contact-us-form label {
+	font-size: 140%;
+	font-family: "PT Sans", Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+}
+
+input[type="text"], input[type="email"], input[type="date"], input[type="tel"], select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 5px 0 20px;
+	display: inline-block;
+	border: 1px solid #9A9A9A; border-radius: 4px; box-sizing: border-box;
+	background-color: #f2f2f2;
+	outline: none;
+}
+
+input[type="submit"] {
+	width: 100%;
+	background-color: #66a3ff;
+	padding: 14px;
+	margin: 8px 0;
+	border: none; border-radius: 4px;
+	cursor: pointer;
+	font-size: 120%;
+	outline: none;
+}
+
+input[type="submit"]:hover {
+	background-color: #b3d1ff;
+}
+
+textarea {
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
+	font-size: 14px;
+	width: 100%;
+	height: 125px;
+	padding: 12px 20px;
+	margin: 5px 0 20px;
+	display: inline-block;
+	border: 1px solid #9A9A9A; border-radius: 4px; box-sizing: border-box;
+	background-color: #f2f2f2;
+	outline: none;
+	resize: none;
+}
+
+/* FAQ */
+#FAQ {
+	width: 40%;
+	float: right;
+	margin-bottom: 120px; margin-top: 40px;
+}
+
+#FAQ h3 {
+	font-size: 140%;
+}
+
+#FAQ p {
+	font-size: 120%;
+}
+
+#FAQ .question-and-answer {
+	margin: 0 20px 30px;
 }
