--- a/MILESTONE 2/mainstyles.css
+++ b/MILESTONE 2/mainstyles.css
@@ -49,6 +49,15 @@ table td {
 	font-weight: bold;
 }
 
+.center-list {
+	margin: 0 auto;
+	width: 85%;
+}
+
+.center-list li {
+	margin-bottom: 10px;
+	text-align: left;
+}
 /* Sticky Footer */
 #wrapper {
 	min-height: 100%;
