--- a/MILESTONE 2/homestyles.css
+++ b/MILESTONE 2/homestyles.css
@@ -69,6 +69,7 @@ Main Blue (Nav, Footer & Logo): #005794
 	clear: both;
 	height: 200px;
 	background-color: #23c5b7;
+	color: black;
 	margin-bottom: 40px;
 }
 
@@ -98,7 +99,7 @@ Main Blue (Nav, Footer & Logo): #005794
 	list-style: none;
 	text-align: center;
 	font-family: 'PT Sans', Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-	font-size: 110%;
+	font-size: 112%;
 	margin-left: -22px;
 }
 
@@ -126,6 +127,7 @@ Main Blue (Nav, Footer & Logo): #005794
 	font-size: 115%;
 	background-color: white;
 	cursor: pointer;
+	text-shadow: none;
 	margin: 22px 22px 18px;
 	padding: 24px;
 	text-align: center;
