--- a/MILESTONE 2/homestyles.css
+++ b/MILESTONE 2/homestyles.css
@@ -68,7 +68,7 @@ Main Blue (Nav, Footer & Logo): #005794
 #upcoming-concert {
 	clear: both;
 	height: 200px;
-	background-color: #23c5b7;
+	background-color: mediumturquoise;
 	color: black;
 	margin-bottom: 40px;
 }
