--- a/MILESTONE 2/supportstyles.css
+++ b/MILESTONE 2/supportstyles.css
@@ -97,8 +97,9 @@ aside {
 }
 
 /* MEMBER FORM STYLES */
-#membership-form {
-	float: left; /* The footer doesn't recoginize the content if it isn't floated for some reason */
+
+form fieldset {
+	margin-top: 30px; margin-bottom: 5px;
 }
 
 form label {
@@ -106,7 +107,7 @@ form label {
 	font-size: 130%;
 }
 
-input[type="text"], input[type="email"], input[type="date"], input[type="tel"], select {
+input[type="text"], input[type="email"], input[type="date"], input[type="tel"], input[type="number"], select {
 	width: 100%;
 	padding: 12px 20px;
 	margin: 5px 0 20px;
@@ -133,6 +134,16 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
 	background-color: #b3d1ff;
+}
+
+textarea {
+	width: 100%;
+	max-width: 100%;
+	padding: 12px 20px;
+	margin: 5px 0 20px;
+	display: inline-block;
+	border: 2px solid #9A9A9A; border-radius: 4px; box-sizing: border-box;
+	background-color: #f2f2f2;
 }
 
 label.childNames {
