Add newsfeed, Add agm annoncement page, Add newsfeed styling

--- a/MILESTONE 2/mainstyles.css
+++ b/MILESTONE 2/mainstyles.css
@@ -163,6 +163,65 @@ nav#breadcrumb li+li:before {
 	content: "/\00a0";
 }
 
+/* ANNOUNCEMENTS */
+
+#announcements {
+	margin-bottom: 270px;
+}
+
+#announcements h2 {
+	text-align: center;
+	font-family: 'PT Serif', Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
+	border-bottom: 2px solid #005794;
+	margin: 0 auto 20px;
+	font-size: 220%;
+}
+
+#announce2 {
+	margin: 0px 25px;
+}
+
+.announcement-box {
+	background-color: #005794;
+	width: 411px;
+	height: 210px;
+	float: left;
+}
+
+.announcement-title {
+	color: white;
+	font-size: 130%;
+	font-family: "PT Serif", Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
+	margin: 10px 0px 0px 0px;
+	text-align: center;
+}
+
+.announcement-info {
+	color: white;
+	text-align: center;
+	padding: 10px 20px;
+}
+
+.announcement-info-box {
+	height: 105px;
+}
+
+.expiry-date {
+	color: white;
+	text-align: center;
+	font-size: 90%;
+}
+
+.announce-btn {
+	background-color: white;
+	font-family: "PT Sans", Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-size: 105%;
+	border: none;
+	height: 30px;
+	width: 371px;
+	margin: 0 20px
+}
+
 /* Footer */
 footer {
 	background-color: #005794;
