--- a/MILESTONE 2/homestyles.css
+++ b/MILESTONE 2/homestyles.css
@@ -60,17 +60,15 @@ Main Blue (Nav, Footer & Logo): #005794
 }
 
 #next-con-learn-more {
-	display: block;
 	float: left;
 	width: 366px;
 	height: 70px;
 	font-size: 115%;
 	background-color: white;
-	cursor: pointer;
-	text-shadow: none;
 	margin: 22px 22px 18px;
 	padding: 24px;
 	text-align: center;
+	border: none;
 }
 
 #upcoming-concert .ticketShop {
